--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ github_username:  jekyll
 
 # Build settings
 theme: minima
+minimal_mistakes_skin: "aqua" # "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 plugins:
   - jekyll-feed
 
